Added SQLite database for notebook messages

--- a/Cli/Cli.csproj
+++ b/Cli/Cli.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\LuaNotebookScripting\LuaNotebookScripting.csproj" />
+      <ProjectReference Include="..\DB\NotebookDB.csproj" />
     </ItemGroup>
 
 </Project>
